--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -1054,7 +1054,7 @@
                     <thead role="rowgroup">
                       <tr role="row">
                         <th role="columnheader">検針日時</th>
-                        <th role="columnheader">今回指示数(㎥)</th>
+                        <th role="columnheader">今回あああああああああああああ指示数(㎥)</th>
                         <th role="columnheader">今回使用量</th>
                         <th role="columnheader">状態</th>
                         <th role="columnheader">前回履歴</th>
