--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -1037,7 +1037,7 @@
             <button onClick={handleBackButton} className="back-button" aria-label="戻る">
               &lt;
             </button>
-            <h1 className="header-title">検針ああああああああああ情報</h1>
+            <h1 className="header-title">検針情報</h1>
           </div>
 
           <div className="content-area mantine-container">
