--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -91,8 +91,18 @@
     
     /* Loading & Error States */
     .loading-container { 
-      display: flex; justify-content: center; align-items: center; 
-      min-height: 50vh; flex-direction: column; gap: 16px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      flex-direction: column; 
+      gap: 16px;
+      background-color: rgba(255, 255, 255, 0.95);
+      z-index: 9999;
     }
     .MuiCircularProgress-root {
       width: 40px; height: 40px; border: 4px solid #e0e0e0;
@@ -125,7 +135,18 @@
       min-height: 100vh; 
       background: linear-gradient(135deg, #f0f4f8 0%, #e1e8ed 100%); 
     }
-    .loading-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f0f4f8; }
+    .loading-container { 
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      background-color: rgba(255, 255, 255, 0.95);
+      z-index: 9999;
+    }
     .loading-spinner { width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #007bff; border-radius: 50%; animation: spin 1s linear infinite; }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     .mantine-container { max-width: 1200px; margin: 0 auto; padding: 20px; }
