--- a/html_files/main_app/meter_reading.html
+++ b/html_files/main_app/meter_reading.html
@@ -40,17 +40,10 @@
     #root {
       min-height: 100vh;
       background-color: #f5f5f5;
-    }    .loading-container { 
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex; 
-      align-items: center; 
-      justify-content: center; 
-      background-color: rgba(255, 255, 255, 0.95);
-      z-index: 9999;
+    }
+    .loading-container { 
+      display: flex; align-items: center; justify-content: center; 
+      min-height: 100vh; background-color: #f5f5f5; 
     }
     .loading-spinner { 
       width: 40px; height: 40px; border: 4px solid #e1e1e1; 
