--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -463,7 +463,7 @@
                 // 成功時の処理
                 console.log('[room_select] 🎉 検針完了処理成功');
                 
-                // 成功メッセージ表示
+                // 成功メッセージ表示（シンプル版）
                 const successMessage = document.createElement('div');
                 successMessage.className = 'MuiAlert-root MuiAlert-standardSuccess';
                 successMessage.style.cssText = `
